--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">・・・山奥にある廃墟となった遊園地<br>
+          <p class="text-center line-1 anim-typewriter">・・・山奥にある廃墟となった遊園地<br>
            　　放課後に遊園地から子供の奇妙な叫び声が聞こえてくるという噂があった。<br>
             噂の出どころはわからないが<br>
            　　私たちは面白半分でその遊園地肝試しをすることになった<br>
