--- a/index.html
+++ b/index.html
@@ -30,14 +30,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center line-1 anim-typewriter">・・・山奥にある廃墟となった遊園地<br>
-           　　放課後に遊園地から子供の奇妙な叫び声が聞こえてくるという噂があった。<br>
-            噂の出どころはわからないが<br>
-           　　私たちは面白半分でその遊園地肝試しをすることになった<br>
-            私たちは遊園地に入るとそこは寂れた遊具や割れたガラスが散乱していた<br>
-            私は遊園地の奥へ奥へと進むうちにみんなと逸れてしまった<br>
-            「どうしよう、みんなと逸れちゃった。。」<br>
-            みんなを探し出し、遊園地から脱出しろ！</p>
+          <p class="text-center" id="typing"></p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
