色の変更を行いました

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
   <main class="main index-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/RS503DF006.jpg" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ 封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/HEI 2.jpg" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ 封鎖された家庭科室からの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section section--story">
       <div class="container">
@@ -33,12 +33,12 @@
           <p class="text-center" id="typing"></p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
-              <li>30分を超えるとS先生は出てこられない</li>
+              <li>殺人鬼が乗っている観覧車が回り切るまでに謎を解かなければならない</li>
+              <li>3つの謎をとき遊園地から脱出しよう！！</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
-            まずはこの暗号を解かなくては！</p>
+          <p class="text-center">観覧車に刃物を持った人が乗っている！！<br>
+            観覧車が回り切る前に全ての暗号を解かなくては！</p>
         </div>
       </div>
     </section>
@@ -59,13 +59,13 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">遊ぶ日時を決めよう！</h3>
-              <p class="card__content">前後の説明、解説をあわせ、想定所要時間は100分〜120分です。途中で中断することもできますが、お時間に余裕があるときにご参加ください。</p>
+              <p class="card__content">前後の説明、解説をあわせ、想定所要時間は30分〜60分です。途中で中断することもできますが、お時間に余裕があるときにご参加ください。</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
               <h3 class="card__title">紙とペンを用意しよう！</h3>
-              <p class="card__content">メモをとるための紙と筆記用具をお手元にご準備ください。</p>
+              <p class="card__content">>謎解きはメモを取ることがあります、紙と筆記用具をお手元にご準備ください。</p>
             </div>
           </div>
           <div class="column">
@@ -79,7 +79,7 @@
     </section>
     <section class="section bg-color--keycolor">
       <div class="container">
-        <h2 class="section-title">複数人での遊び方</h2>
+        <h2 class="section-title">みんなで遊ぶ</h2>
         <p class="font-eng text-center">Playing games with multiple players</p>
         <div class="row">
           <div class="column">
@@ -110,7 +110,7 @@
     </section>
     <section class="section">
       <div class="container">
-        <a class="btn" href="main.html">準備OK？では、ゲームスタート！！！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
+        <a class="btn" href="main.html">準備OK？ゲームスタート！！！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
       </div>
     </section>
   </main>
