--- a/final.html
+++ b/final.html
@@ -17,7 +17,7 @@
   </header>
   <main class="main final-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/HEI 2.jpg" alt="封鎖された遊園地からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/iosimages.png" alt="封鎖された遊園地からの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
