>スマホ用に修正

--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="封鎖された遊園地からの脱出"></h1>
+    <h1 class="text-center"><img src="assets/images/iosimages.png"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
@@ -283,3 +283,15 @@ STAGE3-3追加　ここまで -->
   <script src="assets/js/main.js"></script>
 </body>
 </html>
+<html>
+<head>
+
+<meta name="viewport"
+   content="width=320,
+      height=480,
+      initial-scale=1.0,
+      minimum-scale=1.0,
+      maximum-scale=2.0,
+      user-scalable=yes" />
+
+</head>
