--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">ブラウザのCookieとキャッシュを<br>削除しよう！</h3>
+              <h3 class="card__title">Cookieとキャッシュを削除</h3>
               <p class="card__content">エラーが起きる原因となる恐れがありますので、必ずCookieとキャッシュを削除してからプレイを開始するようにしてください。</p>
             </div>
           </div>
@@ -84,7 +84,7 @@
         <div class="row">
           <div class="column">
             <div class="card">
-              <h3 class="card__title">コミュニケーションツール<br>を用意！</h3>
+              <h3 class="card__title">通話しながらでも OK！</h3>
               <p class="card__content">例：Zoom、LINE通話など<br>
                 カメラはオフにしたままでも参加は可能です。<br>
                 ただ、離れたところにいる仲間と同じ会場で謎解きをしている気持ちになれるので、カメラをオンにしてみんなでわいわいプレイをすることをお勧めします。</p>
