--- a/hint2.html
+++ b/hint2.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <img src="assets/images/question3.jpg" alt="">
+              <img src="assets/images/Tips2.jpg" alt="">
             </div>
               
  <!-- 2-2ヒント追加
