--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 
   <meta charset="utf-8">
-<title>4-2-5　背景色が伸びる（中央から外）　</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>封鎖された遊園地からの脱出 │ Project N</title>
 <meta name="description"  content="書籍「動くWebデザインアイディア帳」のサンプルサイトです">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <!--==============レイアウトを制御する独自のCSSを読み込み===============-->
@@ -20,7 +22,7 @@
 <body>
   <!--===============オープンエフェクト===============-->
   <div id="splash">
-    <div id="splash-logo">読み込み中..</div>
+    <div id="splash-logo">読ミ込ミ中..</div>
     <!--/splash--></div>
     <div class="splashbg1"></div>
     <div class="splashbg2"></div>
