--- a/main.html
+++ b/main.html
@@ -15,12 +15,6 @@
       <polygon points="0 24.94 0 19.66 7.35 12.47 0 5.92 0 0 12.47 12.47 0 24.94"/>
     </symbol>
   </svg>
-  <header class="header">
-    <div class="container">
-      <div class="header__logo"><img src="assets/images/logo.svg" alt="チームロゴ"></div>
-      <div class="header__name">N・S高生制作サイト</div>
-    </div>
-  </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
     <h1 class="main-title"><img src="assets/images/iosimages.png" alt="封鎖された家庭科室からの脱出"></h1>
@@ -70,7 +64,7 @@ Youtube貼り付けここまで -->
             ------------------------------------------------------------------------------------------------------------>
             <answer-input v-bind:correct="correctAnswer['stage1']['q1']" v-on:answer-input="answerInput($event, 'stage1', 1)"></answer-input>
 
-            <a class="link-hint" href="hint1.html" target="hint1">ヒントをみる ></a>
+            <a class="link-hint" href="hint1.html" target="hint1">ヒントをみる</a>
           </div>
         </section>
         <!-- STAGE1解答入力セクション　ここまで -->
@@ -272,13 +266,6 @@ STAGE3-3追加　ここまで -->
 
     </div>
   </main>
-  <footer class="footer section bg-color--gray">
-    <div class="container">
-        <p class="text-center">授業主催： N・S高<br>協力：株式会社SCRAP<br>企画制作：N・S高生</p>
-        <p class="text-center">「リアル脱出ゲーム」は株式会社SCRAPの登録商標です。</p>
-        <p class="text-center">株式会社SCRAPとN・S高で実施した授業「リアル脱出ゲームの作り方」の一環で<br>生徒が制作したものであり、SCRAPが主催/公認するものではありません。</p>
-    </div>
-  </footer>
   <script src="https://unpkg.com/vue@next"></script>
   <script src="assets/js/main.js"></script>
 </body>
