動画の埋め込み

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="youtube">
-          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/QC1lbSbCaxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100％" height="100%" src="https://www.youtube.com/embed/Tf3nsAwA0-0?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         <div class="story">
           <p class="text-center line-1 anim-typewriter" >・・・山奥にある廃墟となった遊園地　放課後に遊園地から子供の奇妙な叫び声が聞こえてくるという噂があった。噂の出どころはわからないが、 私たちは面白半分でその遊園地肝試しをすることになった。私たちは遊園地に入るとそこは寂れた遊具や割れたガラスが散乱していた。私は遊園地の奥へ奥へと進むうちにみんなと逸れてしまった「どうしよう、みんなと逸れちゃった。。」 みんなを探し出し、遊園地から脱出しろ！</p>
