--- a/hint1.html
+++ b/hint1.html
@@ -24,7 +24,7 @@
   </header>
   <main class="main hint-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/iosimages.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/hint1.png" alt="封鎖された遊園地からの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
   
     <!-- STAGE1ヒント　ここから -->
@@ -41,7 +41,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">190円</p>
+              <p class="card__content">ゆみ</p>
             </div>
           </div>
         </div>
