--- a/final.html
+++ b/final.html
@@ -9,29 +9,25 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="container">
-      <div class="header__logo"><img src="assets/images/logo.svg" alt="チームロゴ"></div>
-      <div class="header__name">N・S高生制作サイト</div>
-    </div>
-  </header>
   <main class="main final-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/iosimages.png" alt="封鎖された遊園地からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/遊園地.gif" alt="封鎖された遊園地からの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
         <div class="box bg-color--subcolor">
-          <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <h2 class="section-title--border">全ステージ クリア</h2>
+          <p class="text-center">おめでとう！全ての謎を解き、脱出可能になったぞ！！<br>
+            彼らの最後の物語を閲覧してください<br>
+            ⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎⬇︎</p>
         </div>
       </div>
     </section>
     <section class="section">
       <div class="container">
-          <figure class="image__container">
-             <img src="assets/images/stage.png" alt="">
-          </figure>
+        <div class="youtube">
+          <iframe width="100％" height="100%" src="https://www.youtube.com/embed/DjZsBVEaU3I?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
 
 <!--  YouTube貼り付け
             <div class="youtube__container">
@@ -40,13 +36,12 @@
               </div>
             </div>
 Youtube貼り付けここまで-->
-          ß
+    
       </div>
-         -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">脱出ゲームは楽しんでくれましたか？<br>
+          私たちはこのゲームを楽しんでくれるように全力で作成いたしました<br>
+           皆さんの意見も聞きたいですね。。。</p>
+        <p class="text-center">それでは、またどこかで！</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
@@ -63,14 +58,20 @@ Youtube貼り付けここまで-->
           <div class="column">
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
-              <p class="card__content">企画・制作メンバーの紹介など。<br>
-                テキストテキストテキストテキストテキストテキストテキスト<br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+              <p class="card__content">企画・制作メンバーの紹介<br>
+                <br>
+                ｲﾛﾝﾅ人</p>
             </div>
           </div>
         </div>
       </div>
     </section>
   </main>
+  <h3 class="section-title">==== STAGE：1の解説 ====</h3>
+  <img src="assets/images/解説1.png" alt="封鎖された遊園地からの脱出">
+  <h4 class="section-title">==== STAGE：2の解説 ====</h4>
+  <img src="assets/images/解説2.png" alt="封鎖された遊園地からの脱出">
+  <h5 class="section-title">==== STAGE：3の解説 ====</h5>
+  <img src="assets/images/解説3.png" alt="封鎖された遊園地からの脱出">
 </body>
 </html>
