--- a/hint3.html
+++ b/hint3.html
@@ -36,7 +36,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <img src="assets/images/Tips3.jpg" alt="">
+              <img src="assets/images/Tips3.png" alt="">
             </div>
               
  <!-- 3-2ヒント追加
@@ -57,7 +57,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">apple</p>
+              <p class="card__content">かんらんしゃ</p>
             </div>
 
  <!-- 3-2答え追加
