--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
   </svg>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/iosimages.png" alt="封鎖された遊園地からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/遊園地.gif" alt="封鎖された遊園地からの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
@@ -27,13 +27,14 @@
         <!-- STAGE1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>A男を救い出せ！</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>翔太を救い出せ！</h2>
             <div class="youtube">
-          <iframe width="100％" height="100%" src="https://www.youtube.com/embed/Tf3nsAwA0-0?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100％" height="100%" src="https://www.youtube.com/embed/3Ut1LPwoZUo?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-            <p class="text-center">A男が載っているジェットコースターが止まらないみたい！！<br>
+            <p class="text-center">※STAGE:1 の　ストーリー動画を見てみよう！！<br>
+              翔太が乗っているいるジェットコースターが勝手に動き出した！！<br>
               停止ボタンを押すにはパスワードが必要みたいだ<br>
-              下の画像の謎を解き、A男を救い出そう</p>
+              下の画像の謎を解き、翔太を助けだそう</p>
             <p class="text-center">＊困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
@@ -84,7 +85,7 @@ Youtube貼り付けここまで -->
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
               <div class="clear-message__content">ボタンのロックが外れた！<br>
-               A男を助けることができそうだ<br>
+               雄太を助けることができそうだ<br>
                 話を聞いてみよう</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
           </div>
@@ -105,11 +106,12 @@ Youtube貼り付けここまで -->
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>鍵のかかった扉</h2>
               <div class="youtube">
-          <iframe width="100％" height="100%" src="https://www.youtube.com/embed/Tf3nsAwA0-0?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100％" height="100%" src="https://www.youtube.com/embed/vm-YI6X4MlQ?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-              <p class="text-center">B男がメリーゴーランドに閉じ込められているみたい</br>
-                鍵がかかってて入れないみたいだ<br>
-                扉を開けるに下の画像の謎を解こう</p>
+              <p class="text-center">佐々木くんがメリーゴーランドに閉じ込められているみたい</br>
+                扉は鍵がかかってて入れないみたいだ<br>
+                工具箱の中身で鍵を壊せそうだ<br>
+                工具箱を開けるに下の画像の謎を解こう</p>
                 <figure class="image__container">
                   <img src="assets/images/question2.png" alt="">
                 </figure>
@@ -184,8 +186,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">バールで扉の鍵を壊して扉を開けた<br>
-                B男に話を聞いてみよう！！</div>
+              <div class="clear-message__content">工具箱にあったバールで扉の鍵を壊して扉を開けた<br>
+                佐々木くんに話を聞いてみよう！！</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -200,13 +202,13 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>暴走した機械</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>忍び寄る影</h2>
             <div class="youtube">
-          <iframe width="100％" height="100%" src="https://www.youtube.com/embed/Tf3nsAwA0-0?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100％" height="100%" src="https://www.youtube.com/embed/WjEo8mxEHlA?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-            <p class="text-center">コーヒーが勝手に暴走を始めた<br>
-              C子が暴走したコーヒーカップにぶつかりそうで危ない！！<br>
-              暴走を止めるために下の画像の謎を解こう</p>
+            <p class="text-center">この場所から脱出するにはパスワードが必要みたいだ<br>
+              しかしあまり長く考えてる暇はない<br>
+              何かが近づいてきている。。。</p>
             <figure class="image__container">
               <img src="assets/images/question3.png" alt="">
             </figure>
