--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- タイトルエリア　ここまで -->
     <section class="section section--story">
       <div class="container">
-        <h2 class="section-title section-title--keycolor section-title--story js_typing"">ストーリー</h2>
+        <h2 class="section-title section-title--keycolor section-title--story js_typing">ストーリー</h2>
         <div class="youtube">
           <iframe width="100％" height="100%" src="https://www.youtube.com/embed/Tf3nsAwA0-0?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
