--- a/main.html
+++ b/main.html
@@ -29,10 +29,10 @@
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>翔太を救い出せ！</h2>
             <div class="youtube">
-          <iframe width="100％" height="100%" src="https://www.youtube.com/embed/3Ut1LPwoZUo?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="100％" height="100%" src="https://www.youtube.com/embed/iAND5hsNGgU?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
             <p class="text-center">※STAGE:1 の　ストーリー動画を見てみよう！！<br>
-              翔太が乗っているいるジェットコースターが勝手に動き出した！！<br>
+              翔平が乗っているいるジェットコースターが勝手に動き出した！！<br>
               停止ボタンを押すにはパスワードが必要みたいだ<br>
               下の画像の謎を解き、翔太を助けだそう</p>
             <p class="text-center">＊困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
@@ -85,7 +85,7 @@ Youtube貼り付けここまで -->
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
               <div class="clear-message__content">ボタンのロックが外れた！<br>
-               雄太を助けることができそうだ<br>
+               翔平を助けることができそうだ<br>
                 話を聞いてみよう</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
           </div>
