--- a/main.html
+++ b/main.html
@@ -27,14 +27,14 @@
         <!-- STAGE1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>翔太を救い出せ！</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>翔平を救い出せ！</h2>
             <div class="youtube">
           <iframe width="100％" height="100%" src="https://www.youtube.com/embed/iAND5hsNGgU?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
             <p class="text-center">※STAGE:1 の　ストーリー動画を見てみよう！！<br>
               翔平が乗っているいるジェットコースターが勝手に動き出した！！<br>
               停止ボタンを押すにはパスワードが必要みたいだ<br>
-              下の画像の謎を解き、翔太を助けだそう</p>
+              下の画像の謎を解き、翔平を助けだそう</p>
             <p class="text-center">＊困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
