--- a/hint1.html
+++ b/hint1.html
@@ -35,7 +35,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <div class="zoomIn"><a href="#"><span class="mask"><img src="assets/images/Tips.jpg" alt=""></span></a></div>
+              <div class="zoomIn"><a href="#"><span class="mask"><img src="assets/images/Tips.png" alt=""></span></a></div>
             </div>
           </div>
           <div class="column">
