--- a/main.html
+++ b/main.html
@@ -108,7 +108,8 @@ Youtube貼り付けここまで -->
               <div class="youtube">
           <iframe width="100％" height="100%" src="https://www.youtube.com/embed/vm-YI6X4MlQ?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-              <p class="text-center">佐々木くんがメリーゴーランドに閉じ込められているみたい</br>
+              <p class="text-center">※STAGE:2 の　ストーリー動画を見てみよう！！<br>
+                佐々木くんがメリーゴーランドに閉じ込められているみたい</br>
                 扉は鍵がかかってて入れないみたいだ<br>
                 工具箱の中身で鍵を壊せそうだ<br>
                 工具箱を開けるに下の画像の謎を解こう</p>
@@ -206,7 +207,8 @@ Youtube貼り付けここまで -->
             <div class="youtube">
           <iframe width="100％" height="100%" src="https://www.youtube.com/embed/WjEo8mxEHlA?rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-            <p class="text-center">この場所から脱出するにはパスワードが必要みたいだ<br>
+            <p class="text-center">※STAGE:3 の　ストーリー動画を見てみよう！！<br>
+              この場所から脱出するにはパスワードが必要みたいだ<br>
               しかしあまり長く考えてる暇はない<br>
               何かが近づいてきている。。。</p>
             <figure class="image__container">
