--- a/index.html
+++ b/index.html
@@ -51,17 +51,18 @@
           </div>
         <div class="story">
           <p class="text-center line-1 anim-typewriter randomAnime" >・・・山奥にある廃墟となった遊園地　放課後に遊園地から子供の奇妙な叫び声が聞こえてくるという噂があった。<br>
-            噂の出どころはわからないが、 私たちは面白半分でその遊園地肝試しをすることになった。<br>
+            噂の出どころはわからないが、 私たち4人は面白半分でその遊園地肝試しをすることになった。<br>
             私たちは遊園地に入るとそこは寂れた遊具や割れたガラスが散乱していた。私は遊園地の奥へ奥へと進むうちにみんなと逸れてしまった「どうしよう、みんなと逸れちゃった。。」 みんなを探し出し、遊園地から脱出しろ！</p>
           
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>殺人鬼が乗っている観覧車が回り切るまでに謎を解かなければならない</li>
-              <li>3つの謎をとき遊園地から脱出しよう！！</li>
+              <li>どうしよう、みんなとと逸れてしまった</li>
+              <li>みんなを置いて帰れないし、探し出さなきゃ
+              </li>
             </ul>
           </div>
-          <p class="text-center">観覧車に刃物を持った人が乗っている！！<br>
-            観覧車が回り切る前に全ての暗号を解かなくては！</p>
+          <p class="text-center">ストーリー動画を見ながら謎を解こう！<br>
+            逸れてしまった4人 (ミカ・翔平・佐々木・レナ) を探し出そう</p>
         </div>
       </div>
     </section>
