--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>どうしよう、みんなとと逸れてしまった</li>
+              <li>どうしよう、みんなと逸れてしまった</li>
               <li>みんなを置いて帰れないし、探し出さなきゃ
               </li>
             </ul>
