--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
           
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>どうしよう、みんなと逸れてしまった</li>
-              <li>みんなを置いて帰れないし、探し出さなきゃ
+              <li>ストーリー動画を見ながら謎を解こう！</li>
+              <li>逸れてしまった3人 (翔平・佐々木・レナ) を探し脱出しよう
               </li>
             </ul>
           </div>
-          <p class="text-center">ストーリー動画を見ながら謎を解こう！<br>
-            逸れてしまった4人 (ミカ・翔平・佐々木・レナ) を探し出そう</p>
+          <p class="text-center">どうしよう、みんなと逸れてしまった<br>
+            みんなを置いて帰れないし、合流しないと...</p>
         </div>
       </div>
     </section>
